Continue existing flex hack to correctly align filter icons
I don't know enough css to make this un-hacky, so I'll stick with the existing hack for now.  This could definitely be cleaned up at some point.

--- a/src/clr-angular/data/datagrid/_datagrid.clarity.scss
+++ b/src/clr-angular/data/datagrid/_datagrid.clarity.scss
@@ -343,7 +343,8 @@
       }
 
       clr-dg-filter,
-      clr-dg-string-filter {
+      clr-dg-string-filter,
+      clr-dg-numeric-filter {
         display: flex;
         order: 99;
         margin-left: auto;
